fix scrollbar eje x

--- a/assets/desafios/2.3_media_query/styles.css
+++ b/assets/desafios/2.3_media_query/styles.css
@@ -25,6 +25,8 @@ html {
 
 body {
     min-height: 100vh;
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+
 }
 
 /* responsive images/videos */
